fix: inquiry 글 조회 기능 오류 수정